# PARROT

./: .gitexternals  .gitignore  .gitlab-ci.yml  README.md  init_zephyr_toolchain.sh  meson.build  meson_options.txt  native-arch.ini  native-debian-own-riscv.ini  native-debian.ini  native-gentoo.ini  project-structure.dia
.helix/: config.toml
Docker/: Dockerfile  run-docker.sh
FreeRTOS/: meson.build
GPSLogger/: meson.build
GPSLogger/test/: meson.build
InfiniTime/: meson.build
InfiniTime/analysis/: araconfig.json  meson.build
InfiniTime/toolchain/: arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi.tar.xz.sha256  init_infinitime_toolchain.sh  meson.build  nRF5_SDK_15.3.0_59ac345.zip.sha256  release-14.0.0.tar.gz.sha256
IronOS/: meson.build
IronOS/synthesis/: meson.build
IronOS/toolchain/: init_riscv_toolchain.sh  meson.build
LibrePilot/: librepilot_mock-generator_validator.py  meson.build
Librepilot/: meson.build
POSIX/: meson.build
POSIX/test/: meson.build
POSIX/test/graphs/: condition_var_broad_musl.json  condition_var_broadcast.json  condition_var_initializer.json  condition_variable.json  create_everything.json  file_read.json  file_readv.json  file_write.json  file_writev.json  filestream_open_musl.json  linux_pthread_create.json  linux_syscalls.json  multiple_sigactions.json  mutex.json  mutex_counter.json  mutex_initializer.json  open_twice.json  open_two_files.json  pipe.json  posix_ospert_2022.json  pthread_cancel.json  pthread_create.json  pthread_detach.json  semaphore.json  semaphore_ring_buffer.json  sigaction_macro_test.json  signal_handler.json  signal_handler_siginfo.json  stats_graph.json  wrong_call_in_sighandler.json  wrong_file_access.json  wrong_pipe_access.json
Zephyr/: meson.build
Zephyr/test/: meson.build
Zephyr/test/graphs/: app_kernel.json  dyn_heap.json  dyn_isr.json  dyn_msgq.json  dyn_pipe.json  dyn_queue.json  dyn_sems.json  dyn_stack.json  dyn_sys_sems.json  latency_measure.json  multi_init.json  ospert_2022.json  static_heap.json  static_isr.json  static_msgq.json  static_pipe.json  static_queue.json  static_sems.json  static_stack.json  static_sys_sems.json  static_threads.json  sys_kernel.json
Zephyr/toolchain/: init_zephyr_toolchain.sh  meson.build
arm_freertos_synthesis/: meson.build
experiments/: GenericTimingExperiment.py  ara_experiment.py  instance_graph_experiment.py  make_figures.py  meson.build  multisse_results.py  multisse_synthesis.py  multisse_synthetic_test.py  remote_serial.py  sia_runtime.py
generated_apps/: meson.build  synthetic_sane_02C_01L_2U_15T_90A_90S_00E__0043.oil.json  synthetic_sane_02C_01L_2U_15T_90A_90S_00E__0044.oil.json  synthetic_sane_02C_01L_2U_15T_90A_90S_00E__0045.cc  synthetic_sane_02C_01L_2U_15T_90A_90S_00E__0046.cc  synthetic_sane_02C_01L_2U_15T_90A_90S_00E__0046.oil.json  (+1726 more)
settings/: freertos_gen_passthrough.json  ina_gpslogger.json  ina_i4copter.json.in  ina_infinitime.json.in  ina_ironos.json  ina_libmicrohttpd.json.in  ina_librepilot.json.in  ina_zephyr.json.in  meson.build  multisse_autosar_apps.json.in  multisse_i4copter.json.in  multisse_synthetic_app.json.in  sia_gpslogger.json  sia_infinitime.json  sia_infinitime.json.in  sia_ironos.json  sia_libmicrohttpd.json.in  sia_librepilot.json.in  sia_posix.json  sia_sys_kernel.json.in  sia_zephyr.json.in  sse_autosar_apps.json.in  synthesis_librepilot.json.in
test/POSIX/: meson.build  posix_class.py  remove_sysfunc_body.py
test/POSIX/graphs/: condition_var_broad_musl.json  condition_var_broadcast.json  condition_var_initializer.json  create_everything.json  file_readv.json  file_writev.json  filestream_open_musl.json  funcpointer_issue.json  linux_syscalls.json  pipe.json  pipe2_test.json  pthread_cancel.json  set_thread_attr.json  sigaction_macro_test.json  test_appl_condition_variable.json  test_appl_file_read.json  test_appl_filestream_open.json  test_appl_multiple_sigactions.json  test_appl_mutex_counter.json  test_appl_open_twice.json  test_appl_open_two_files.json  test_appl_pthread_cancel.json  test_appl_pthread_cancel_linux.json  test_appl_pthread_create.json  test_appl_pthread_detach_linux.json  test_appl_pthread_setname_np.json  test_appl_pthread_setname_np_linux.json  test_appl_semaphore.json  test_appl_semaphore_ring_buffer.json  test_appl_set_thread_attr.json  test_appl_set_thread_attr_linux.json  test_appl_sigaction_macro_test.json  test_appl_signal_handler.json  test_appl_signal_handler_siginfo.json  test_appl_sleep.json  test_appl_system_profile_inheritance.json  test_appl_system_profile_inheritance_linux.json  test_appl_thread_attr_cond_calls.json  test_appl_thread_attr_cond_calls_linux.json  test_appl_thread_attr_double_call.json  (+14 more)
test/POSIX/settings/: instance_graph_stats.json
test/Zephyr/: meson.build
test/Zephyr/graphs/: OSPERT_2022-posix.json  app_kernel-posix.json  app_kernel.json  dyn_heap-posix.json  dyn_msgq-arm-nucleo_f303re.json  dyn_pipe-arm-nucleo_f303re.json  dyn_pipe.json  dyn_queue-posix.json  dyn_stack-arm-nucleo_f303re.json  dyn_sys_sems-posix.json  dyn_sys_sems.json  intel-ecfw-zephyr.json  latency_measure-arm-nucleo_f303re.json  latency_measure.json  native_posix-dyn_msgq.json  native_posix-latency_measure.json  native_posix-static_msgq.json  native_posix-static_stack.json  native_posix-static_sys_sems.json  native_sim-app_kernel.json  native_sim-dyn_isr.json  native_sim-dyn_sems.json  native_sim-dyn_stack.json  native_sim-dyn_sys_sems.json  native_sim-static_isr.json  native_sim-static_queue.json  native_sim-static_sems.json  native_sim-static_sys_sems.json  native_sim-sys_kernel.json  nucleo_f303re-OSPERT_2022.json  nucleo_f303re-dyn_sems.json  nucleo_f303re-dyn_sys_sems.json  nucleo_f303re-static_msgq.json  nucleo_f303re-static_pipe.json  nucleo_f303re-static_sems.json  nucleo_f303re-sys_kernel.json  qemu_cortex_m3-app_kernel.json  qemu_cortex_m3-dyn_isr.json  qemu_cortex_m3-dyn_queue.json  qemu_cortex_m3-dyn_sems.json  (+19 more)
tools/: autosar_app_generator.py  clean-subprojects.sh  compare_time.py  gdb_stm32.sh  get_environment_var.py  github-release.py  meson.build
(+14 files in other folders)
